<resources>
    <string name="facebook_application_id" translatable="false">868316640559357</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb868316640559357</string>
    <string name="navigation_header" translatable="false">Navigation header</string>
    <string name="go4lunch_icon" translatable="false">Go4lunch icon</string>
    <string name="app_name" translatable="false">Go4Lunch</string>

    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="subtitle_login">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in">Sign in</string>
    <string name="workmates">Workmates</string>
    <string name="list_view">List View</string>
    <string name="i_m_hungry">I\'m Hungry!</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="connection_succeed">Connection succeed</string>
    <string name="error_authentication_canceled">Error authentication canceled</string>
    <string name="error_no_internet">Error no internet</string>
    <string name="error_unknown_error">Error unknown error</string>
    <string name="map_view">Map View</string>
    <string name="Open_now">Open now</string>
    <string name="Close_now">Close now</string>
    <string name="We_dont_know">We don\'t know, check on the restaurant website</string>
    <string name="website">WEBSITE</string>
    <string name="like">LIKE</string>
    <string name="call">CALL</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="no_email_found">No email found</string>
    <string name="no_username_found">No username found</string>
    <string name="none">none</string>
    <string name="username_updated">Your username has been updated</string>
    <string name="username_not_updated">Your username has not been updated</string>
    <string name="account_deleted">Your account has been deleted</string>
    <string name="successful_disconnection">Successful disconnection</string>
    <string name="write_your_new_username_here">Write your new username here</string>
    <string name="cannot_be_empty">The field cannot be empty</string>
    <string name="upper_case_letter">Start with one upper case letter</string>
    <string name="maximum_letters">Don\'t use more than 13 characters</string>
    <string name="Logout">LOGOUT</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="update_username">Update username</string>
    <string name="want_logout">Are you sure you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="want_delete">Are you sure you want to delete your account ?</string>
    <string name="save">Save</string>
    <string name="change_username">Choose a new username</string>
    <string name="update_profile_picture">Update profile picture</string>
    <string name="error_chosen_restaurant">Impossible to choose this restaurant for lunch, sorry !</string>
    <string name="success_chosen_restaurant">Congratulations, you have chosen a restaurant for lunch !</string>
    <string name="is_joining">is joining!</string>
    <string name="no_website_available">Sorry, no website available</string>
    <string name="no_phone_number_available">Sorry, no phone number available</string>
    <string name="choice_canceled">Your choice has been canceled !</string>
    <string name="choice_updated">Your choice has been updated !</string>
    <string name="restaurant_liked">Restaurant liked !</string>
    <string name="restaurant_unliked">Restaurant unliked !</string>
    <string name="error_unlike">\"Error, impossible to unlike \"</string>
    <string name="error_like">Error, impossible to like</string>
    <string name="error_delete_account">Error, impossible to delete your account</string>
    <string name="profile_picture_updated">Your profile picture has been updated</string>
    <string name="error_profile_picture_updated">Error, impossible to update your profile picture</string>
    <string name="search_a_restaurant">Search a restaurant</string>
    <string name="search_a_workmate">Search a workmate</string>
    <string name="chat_with">Chat with</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="notification_title">Don\’t forget your meal</string>
    <string name="notification_message">Today you eat at</string>
    <string name="notification_joining">This friends join you : </string>
    <string name="notification">notification</string>
    <string name="available_workmates">Available workmates</string>
    <string name="gps_already_enabled">GPS is already Enabled!</string>
    <string name="not_selected_eating_place">You have not selected an eating place yet!</string>

</resources>