<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/your_lunch"
            android:icon="@drawable/ic_restaurant_menu_white_24dp"
            android:title="@string/your_lunch"
            android:enabled="true"/>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings"
            android:enabled="true"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_white_24dp"
            android:title="@string/logout"
            android:enabled="true"/>
    </group>
</menu>