<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/go4lunch_background"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/go4lunch_sign_in"
        android:contentDescription="@string/go4lunch_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:gravity="center"
        android:text="@string/subtitle_login"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/background_button_facebook"
        android:drawableStart="@drawable/logo_facebook"
        android:drawablePadding="-40dp"
        android:paddingStart="20dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/sign_in_with_facebook"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view2"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/background_button_google"
        android:drawableStart="@drawable/logo_google"
        android:drawablePadding="-40dp"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/sign_in_with_google"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_button"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>